# pdf2mandarin-anki

./: code_review.md  extract_words.py  main.py  overview.md  pyproject.toml  todo.md  word_sentence_pairs.json
tools/: extract_words.py  generate_audio.py  generate_sample_sentences.py  misc.py
