[project]
name = "python-extract"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "edge-tts>=7.2.8",
    "genanki>=0.13.1",
    "jieba>=0.42.1",
    "pdf-highlight-extractor>=0.1.2",
    "pymupdf>=1.28.0",
    "requests>=2.34.2",
]
